 <commands.cpp/.h>   Completely rewritten. Moved every ingame command into own method, called by
                     a main function which takes care of all args. Maybe has to be improved later, but its ok for now.

====================
Namikon; 21.12.2006 21:50 GMT+1
----------
[rev. 56]

Improved pak_decompress script from Akiko
- Added errorcheck for in/output file
- Added check for NC and normal zLib files
  (Can unpak both)
- Added optional details-output

The script is now capable to be used in batchfiles, since the only output is either [OK] <filename> or [ERROR] <filename>.
if you dont want this, you can specify detailed output with all errors.

====================
Namikon; 21.12.2006 21:55 GMT+1
----------
[rev. 57]

Forgot the CHANGELOG ^^

====================
Namikon; 22.12.2006 17:33 GMT+1
----------
[rev. 58]

<General changes>
- Improved pak_decompress tool from Akiko
- Added tool "getsvnrev" (Same again in src/dev_tools, required for make process)
- Improved Hammag's setsvnrev bash script (Now does errorcheck and has an alternative way to
  grab SVN revision if SVN is not installed)
- Splitup of commands.cpp. Every command has now its own .cpp file in gamecommands/.
  Makes it a lot easier to handle new commands or change/fix/remove existing ones
- ReEnabled debug-output while loading world .dat files. Was commented out for some reason

No real "changes" or "fixes" to main-source files. Only splitup's and new/improved devtools.
See SVN->Diff for details

====================
Namikon; 22.12.2006 22:55 GMT+1
----------
[rev. 59]
<internal version: 0.1.5 Dev>

- Added missing Makefile for gamecommands/ subfolder
- Removed check for ZoneID 552 from jail.cpp and unjail.cpp; This zone is never used
- Moved mShunned from Account to chars
- Added mJailed to chars with methods to identify a jailed player
- Added explicit override to GM teleport and jail/unjail commands (The only way to move someone if target is jailed)
- Completed shun/unshun command