@@ -22,12 +22,12 @@
 /*
 
 	udp_sync.cpp - decoder classes for UDP Sync messages
-  
+
 	CREATION: 30 Aug 2006 Hammag
 
 	MODIFIED:
 	REASON: -
-	
+
 	TODO : put chunking code from PUdpSync2::DoAction() in a SendChunkedMessqage(PClient* nClient, PMessage* nMessage, u8 nChunkSize = 220)
 */
 
@@ -39,7 +39,7 @@
 PUdpSync0::PUdpSync0(PMsgDecodeData* nDecodeData) : PUdpMsgAnalyser(nDecodeData)
 {
   nDecodeData->mName << "/0x01";
-} 
+}
 
 PUdpMsgAnalyser* PUdpSync0::Analyse()
 {
@@ -80,7 +80,7 @@ void PUdpSync0::GetToSync1(PMsgDecodeData* nDecodeData)
 {
 	PClient* curClient = nDecodeData->mClient;
 
-	u32 loc = curClient->GetChar()->GetLocation(); 
+	u32 loc = curClient->GetChar()->GetLocation();
 //Console->Print("inside HandleGame : Location: %d", loc);
 	SendZone(curClient, loc);
 
@@ -93,14 +93,14 @@ void PUdpSync0::GetToSync1(PMsgDecodeData* nDecodeData)
 	*tmpMsg << (u8)0x6b; // ?
 	//*tmpMsg << (u16) (curClient->getUDPConn()->getAddr()).sin_port; // Local or remote port here ???
 	*tmpMsg << (u16) (curClient->getUDPConn()->getPort());
-	
+
 	curClient->getUDPConn()->SendMessage(tmpMsg);
-	
+
 	nDecodeData->mState = DECODE_ACTION_DONE | DECODE_FINISHED;
 	//State->UDP.mSynced=true;
 	nDecodeData->mClientState->UDP.mState = PGameState::UDP::GUS_SYNC1;// To change later
 //Console->Print("Initialize: UDP_ID");
-	curClient->SetUDP_ID(0);  
+	curClient->SetUDP_ID(0);
 }
 
 
@@ -109,13 +109,13 @@ void PUdpSync0::GetToSync1(PMsgDecodeData* nDecodeData)
 PUdpSync1::PUdpSync1(PMsgDecodeData* nDecodeData) : PUdpMsgAnalyser(nDecodeData)
 {
   nDecodeData->mName << "/0x03";
-} 
+}
 
 PUdpMsgAnalyser* PUdpSync1::Analyse()
 {
   mDecodeData->mName << "=Sync1";
   mDecodeData->mState = DECODE_ACTION_READY | DECODE_FINISHED;
-  
+
   return this;
 }
 
@@ -128,7 +128,7 @@ bool PUdpSync1::DoAction()
     return true;
   }
   else
-    return false; 
+    return false;
 }
 
 /**** PUdpSync2 ****/
@@ -136,13 +136,13 @@ bool PUdpSync1::DoAction()
 PUdpSync2::PUdpSync2(PMsgDecodeData* nDecodeData) : PUdpMsgAnalyser(nDecodeData)
 {
   nDecodeData->mName << "/0x0c";
-} 
+}
 
 PUdpMsgAnalyser* PUdpSync2::Analyse()
 {
   mDecodeData->mName << "=Sync2";
   mDecodeData->mState = DECODE_ACTION_READY | DECODE_FINISHED;
-  
+
   return this;
 }
 
@@ -151,14 +151,14 @@ bool PUdpSync2::DoAction()
   if ((mDecodeData->mState & DECODE_ACTION_READY) && (mDecodeData->mClientState->UDP.mState == PGameState::UDP::GUS_SYNC2))
   {
     PClient* nClient = mDecodeData->mClient;
-    
+
     // Baseline message chunking & sending
     PMessage* BaselineMsg = MsgBuilder->BuildBaselineMsg(nClient);
     PMessage* ChunkBuffer;
     PMessage* ChunkMsg;
     const u16 ChunkSize = 220;
     u16 ChunksNum = (BaselineMsg->GetSize() + ChunkSize - 1)/ChunkSize;
-    
+
     for (u16 ChunkID = 0; ChunkID < ChunksNum; ChunkID++)
     {
       ChunkBuffer = BaselineMsg->GetChunk(0, ChunkSize, ChunkID);
@@ -167,11 +167,11 @@ bool PUdpSync2::DoAction()
         Console->Print(RED, BLACK, "Baseline: Bad chunk number calculation: %d for size %d", ChunksNum, BaselineMsg->GetSize());
         break;
       }
-      
+
       ChunkMsg = new PMessage(ChunkSize + 15);
       //Client->IncreaseUDP_ID();
       nClient->SetUDP_ID(nClient->GetUDP_ID()+1);
-      
+
       *ChunkMsg << (u8)0x13;
       *ChunkMsg << (u16)nClient->GetUDP_ID();
       *ChunkMsg << (u16)nClient->GetSessionID();
@@ -183,33 +183,34 @@ bool PUdpSync2::DoAction()
       *ChunkMsg << (u16)ChunksNum;
       *ChunkMsg << (u8)0x19; // ? Type ?
       *ChunkMsg << *ChunkBuffer;
-      
+
 //Console->Print(GREEN, BLACK, "Baseline: ----------- chunk %d/%d", ChunkID+1, ChunksNum);
 //ChunkMsg->Dump();
-      
+
       delete ChunkBuffer;
       nClient->getUDPConn()->SendMessage(ChunkMsg);
     }
     delete BaselineMsg;
-    
+
     // Sending "CharInfo3" message
     PMessage* CharInfo3Msg = MsgBuilder->BuildCharInfo3Msg(nClient);
     nClient->getUDPConn()->SendMessage(CharInfo3Msg);
-    
+
     mDecodeData->mClientState->UDP.mState = PGameState::UDP::GUS_SYNC3;
-      
+
     // Dispatching info to & from other chars in zone
     int nbSent;
     nbSent = ClientManager->SendUDPZoneWelcomeToClient(nClient);
 //Console->Print(GREEN, BLACK, " %d Welcome message were sent to client %d", nbSent, Client->GetIndex());
-  
-    PMessage* HelloMsg = MsgBuilder->BuildCharHelloMsg(nClient);   
+
+    PMessage* HelloMsg = MsgBuilder->BuildCharHelloMsg(nClient);
     nbSent = ClientManager->UDPBroadcast(HelloMsg, nClient);
 //Console->Print(GREEN, BLACK, "Client %d: Hello message sent to %d chars", Client->GetIndex(), nbSent);
-    
+
+    nClient->CheckAwaitingWarpto();
     mDecodeData->mState = DECODE_ACTION_DONE | DECODE_FINISHED;
     return true;
   }
   else
-    return false; 
+    return false;
 }
